(test
 (name test_list)
 (libraries dscheck alcotest)
 (modules test_list))

(test
 (name test_naive_counter)
 (libraries dscheck alcotest)
 (modules test_naive_counter))

(test
 (name test_michael_scott_queue)
 (libraries dscheck alcotest)
 (modules test_michael_scott_queue michael_scott_queue))

(test
 (name test_trace)
 (libraries dscheck alcotest)
 (modules test_trace))

(rule
 (with-stdout-to
  report_trace.output
  (run ./test_trace.exe)))

(rule
 (alias runtest)
 (action
  (diff report_trace.expected report_trace.output)))

(test
 (name test_conditional1)
 (libraries dscheck alcotest)
 (modules test_conditional1))

(test
 (name test_conditional2)
 (libraries dscheck alcotest)
 (modules test_conditional2))

(executable
 (name gen_program)
 (libraries dscheck)
 (modules gen_program))